[gd_scene load_steps=18 format=2]

[ext_resource path="res://Tilemap Images/Asset/light.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Art/dog/dogSit.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Art/dog/dog2.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/Art/dog/dog1.png" type="Texture" id=4]
[ext_resource path="res://SCENES/DogGhost.gd" type="Script" id=5]
[ext_resource path="res://ASSETS/Audio/dog/dogDeath.wav" type="AudioStream" id=6]
[ext_resource path="res://SCENES/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://ASSETS/Audio/dog/dogbark2.wav" type="AudioStream" id=8]
[ext_resource path="res://ASSETS/Audio/dog/dogwhine.wav" type="AudioStream" id=9]
[ext_resource path="res://ASSETS/Art/dog/dogBowl.png" type="Texture" id=10]
[ext_resource path="res://SCENES/interactableBowl.gd" type="Script" id=11]
[ext_resource path="res://ASSETS/Audio/OOT_Secret.wav" type="AudioStream" id=12]
[ext_resource path="res://ASSETS/Art/bone.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "sit",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 69.2209

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1007.39, 673.899 )

[sub_resource type="CircleShape2D" id=4]
radius = 32.4692

[node name="DogGhost" type="Area2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "sit"
speed_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
energy = 0.9

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
margin_left = -56.6357
margin_top = -87.0643
margin_right = -16.6357
margin_bottom = -47.0643
rect_scale = Vector2( 0.24, 0.24 )

[node name="Sight" type="Area2D" parent="."]

[node name="SightArea" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 3 )

[node name="bark" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="whine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="interactableBowl" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource( 11 )

[node name="bowlSprite" type="Sprite" parent="interactableBowl"]
position = Vector2( 155.11, 43.8329 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactableBowl"]
position = Vector2( 154.249, 39.6628 )
shape = SubResource( 4 )

[node name="secretSound" type="AudioStreamPlayer2D" parent="interactableBowl"]
stream = ExtResource( 12 )

[node name="boneSprite" type="Sprite" parent="interactableBowl"]
visible = false
position = Vector2( 155.647, 27.4361 )
texture = ExtResource( 13 )
[connection signal="area_entered" from="." to="." method="_on_DogGhost_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DogGhost_area_exited"]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
